--- a/Finances/Finances/ClientApp/angular.json
+++ b/Finances/Finances/ClientApp/angular.json
@@ -132,5 +132,8 @@
       }
     }
   },
-  "defaultProject": "Finances"
+  "defaultProject": "Finances",
+  "cli": {
+    "analytics": false
+  }
 }
